UI action and color changes. Row updating is in place

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 ComeGetMe.xcodeproj/project.xcworkspace/xcuserdata/brian_anderson.xcuserdatad/UserInterfaceState.xcuserstate
+ComeGetMe.xcodeproj/xcuserdata/brian_anderson.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
