--- a/ComeGetMe/ComeGetMe-Info.plist
+++ b/ComeGetMe/ComeGetMe-Info.plist
@@ -22,7 +22,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.623consulting.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.623consulting.comegetme</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
