--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 ComeGetMe.xcodeproj/project.xcworkspace/xcuserdata/brian_anderson.xcuserdatad/UserInterfaceState.xcuserstate
 ComeGetMe.xcodeproj/xcuserdata/brian_anderson.xcuserdatad/xcdebugger/Breakpoints.xcbkptlist
+Need that Ride.xcodeproj/project.xcworkspace/xcuserdata/brian_anderson.xcuserdatad/UserInterfaceState.xcuserstate
